syntax = "proto3";

package pb;

option go_package = "./pb";

message OrderedProduct {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  uint32 quantity = 5;
}

message Order {
  string id = 1;
  bytes createdAt = 2;
  string accountId = 3;
  double totalPrice = 4;
  repeated OrderedProduct products = 5;
}

message OrderProduct {
  string id = 1;
  uint32 quantity = 2;
}

message PostOrderRequest {
  string accountId = 1;
  double total_price = 2;
  repeated OrderProduct products = 3;
}

message PostOrderResponse {
  Order order = 1;
}

message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message GetOrdersForAccountRequest {
  string accountId = 1;
}

message GetOrdersForAccountResponse {
  repeated Order orders = 1;
}

service OrderService {
  rpc PostOrder (PostOrderRequest) returns (PostOrderResponse);
  rpc GetOrdersForAccount (GetOrdersForAccountRequest) returns (GetOrdersForAccountResponse);
}